// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoubleLock should have a blue double lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DoubleLock
    colour="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="blue"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,23.1248)"
        />
        <G
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,42.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="blue"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,15.2499,32.4588)"
        />
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
          fill="transparent"
          stroke="blue"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,31.4999,16.1248)"
        />
        <Path
          d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
          fill="transparent"
          stroke="blue"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,26.4999,34.4168)"
        />
      </G>,
      "height": "24",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 38 42.9167",
      "width": "24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />,
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />,
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />,
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "blue",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />,
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,42.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "blue",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
            "fill": "transparent",
            "stroke": "blue",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
            "fill": "transparent",
            "stroke": "blue",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />
        </G>,
        "height": "24",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 38 42.9167",
        "width": "24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,23.1248)"
            />,
            <G
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="blue"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,15.2499,32.4588)"
            />,
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,31.4999,16.1248)"
            />,
            <Path
              d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,26.4999,34.4168)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="blue"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />,
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "blue",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,42.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DoubleLock should have a larger double lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DoubleLock
    colour="black"
    scale={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,23.1248)"
        />
        <G
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,42.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,15.2499,32.4588)"
        />
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,31.4999,16.1248)"
        />
        <Path
          d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,26.4999,34.4168)"
        />
      </G>,
      "height": "48",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 38 42.9167",
      "width": "48",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />,
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />,
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />,
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />,
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,42.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />
        </G>,
        "height": "48",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 38 42.9167",
        "width": "48",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,23.1248)"
            />,
            <G
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,15.2499,32.4588)"
            />,
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,31.4999,16.1248)"
            />,
            <Path
              d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,26.4999,34.4168)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />,
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "black",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,42.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DoubleLock should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DoubleLock
    colour="black"
    scale={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,23.1248)"
        />
        <G
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,42.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,15.2499,32.4588)"
        />
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,31.4999,16.1248)"
        />
        <Path
          d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,26.4999,34.4168)"
        />
      </G>,
      "height": "24",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 38 42.9167",
      "width": "24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />,
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />,
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />,
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />,
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,42.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />
        </G>,
        "height": "24",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 38 42.9167",
        "width": "24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,23.1248)"
            />,
            <G
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,15.2499,32.4588)"
            />,
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,31.4999,16.1248)"
            />,
            <Path
              d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,26.4999,34.4168)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />,
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "black",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,42.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DoubleLock should render but not see a double lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DoubleLock
    scale={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="rgb(204,204,204)"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,23.1248)"
        />
        <G
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,42.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="rgb(204,204,204)"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,15.2499,32.4588)"
        />
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
          fill="transparent"
          stroke="rgb(204,204,204)"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,31.4999,16.1248)"
        />
        <Path
          d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
          fill="transparent"
          stroke="rgb(204,204,204)"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,26.4999,34.4168)"
        />
      </G>,
      "height": "0",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 38 42.9167",
      "width": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />,
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />,
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />,
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "rgb(204,204,204)",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />,
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,42.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "rgb(204,204,204)",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
            "fill": "transparent",
            "stroke": "rgb(204,204,204)",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
            "fill": "transparent",
            "stroke": "rgb(204,204,204)",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,23.1248)"
          />
          <G
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,42.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,15.2499,32.4588)"
          />
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,31.4999,16.1248)"
          />
          <Path
            d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,26.4999,34.4168)"
          />
        </G>,
        "height": "0",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 38 42.9167",
        "width": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,23.1248)"
            />,
            <G
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="rgb(204,204,204)"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,15.2499,32.4588)"
            />,
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,31.4999,16.1248)"
            />,
            <Path
              d="M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,26.4999,34.4168)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,23.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="rgb(204,204,204)"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,42.9167)"
              />,
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "rgb(204,204,204)",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,42.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.689638 -0.558494 -1.248231 -1.2499 -1.248231 C -1.941306 -1.248231 -2.4999 -0.689638 -2.4999 0.00176875 C -2.4999 0.689269 -1.941306 1.251769 -1.2499 1.251769 C -0.558494 1.251769 0.0001 0.689269 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,15.2499,32.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.523338 14.6248 -14.808494 11.452925 -14.992088 7.476362 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,31.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.00116875 L 10.0001 -0.00116875 L 10.0001 17.9168 L -4.9999 17.9168 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,26.4999,34.4168)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
